fix build error

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,7 +5,7 @@ name: Python application
 
 on:
   push:
-    branches: [ "develop",${GITHUB_REF##*/} ]
+    branches: [ "develop"]
   pull_request:
     branches: [ "master" ]
 
